--- a/dparse/build.gradle
+++ b/dparse/build.gradle
@@ -6,7 +6,7 @@ repositories {
 }
 
 dependencies {
-
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
 }
